# sliver-netexec-module

./: .env  .flake8  .gitignore  .gitmodules  .mutmut_pytest.ini  .ruff.toml  MUTATION_TESTING.md  README.md  generate_protobuf.py  pyproject.toml  requirements.txt  ruff.toml  run_mutmut_tests.sh  runtest.sh  setup.py  sliver_exec.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: AGENTS.md
.github/workflows/: test.yml
.sisyphus/notepads/mssql-download-staging/: learnings.md
.sisyphus/plans/: mssql-download-staging.md
docs/: ARCHITECTURE.md  INSTALLATION.md  INTEGRATION_TESTS.md  README_PROTOS.md  TESTING.md  USAGE.md
scripts/: install.sh  mutmut-monitor.sh
src/nxc/modules/: sliver_exec.py
src/sliver/pb/clientpb/: client_pb2.py
src/sliver/pb/commonpb/: common_pb2.py
src/sliver/pb/rpcpb/: services_pb2.py  services_pb2_grpc.py
src/sliver/pb/sliverpb/: sliver_pb2.py
src/sliver/tools/: __init__.py  generate_cli.py
src/sliver_client/: __init__.py  client.py  config.py  interactive.py  protobuf.py  session.py
src/sliver_client/pb/clientpb/: client_pb2.pyi
src/sliver_client/pb/rpcpb/: services_pb2_grpc.py  services_pb2_grpc.pyi
src/sliver_client/pb/sliverpb/: sliver_pb2.pyi
tests/: conftest.py  e2etests.py  test_e2e.py  test_integration.py  test_protobuf.py  test_protocol_handlers.py  test_sliver_exec.py
